tests/fixtures/errors/E0901_bundle_return_missing_field.mimz
// expect: E0901
bundle Handshake(W: int = 8) {
  valid: bit
  data: bits[W]
}

fn make_handshake(v: bit) -> Handshake(W: 8) {
  { valid: v }
}

module M {
  in a: bit
  wire req: Handshake(W: 8) = make_handshake(a)
  out y: bit
  y = req.valid
}
